# adac-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: ci.yaml
adac/: Cargo.toml
adac-cli/: Cargo.toml  README.md
adac-cli/src/: config.rs  display.rs  main.rs  misc.rs  offline.rs  pkcs11.rs  shared.rs  sign.rs  tests.rs  token.rs  verify.rs
adac-crypto/: Cargo.toml
adac-crypto-aws_lc/: Cargo.toml
adac-crypto-aws_lc/src/: lib.rs
adac-crypto-pkcs11/: Cargo.toml
adac-crypto-pkcs11/src/: lib.rs
adac-crypto-rust/: Cargo.toml
adac-crypto-rust/src/: badrng.rs  ed_448.rs  lib.rs  sm.rs
adac-crypto/src/: lib.rs  public.rs  utils.rs
adac-crypto/src/public/: ec_dsa.rs  ed_25519.rs  ed_448.rs  ml_dsa.rs  rsa.rs  sm.rs
adac-cryptoki/: Cargo.toml
adac-cryptoki/src/: ec_utils.rs  lib.rs  private.rs  public.rs
adac-cryptoki/src/private/: ec.rs  mldsa.rs  rsa.rs
adac-cryptoki/src/public/: ec.rs  mldsa.rs  rsa.rs
adac-tests/: .gitignore  CLI-PKCS11.md  CLI-TESTS.md  Cargo.toml  README.md  offline-test.sh  pkcs11-test-krypoptic.sh  pkcs11-test.sh  run-tests.sh  test-config.toml
adac-tests/resources/chains/: chain.EcdsaP256  chain.EcdsaP384  chain.EcdsaP521  chain.Ed25519  chain.Ed448  chain.MlDsa44  chain.MlDsa65  chain.MlDsa87  chain.Rsa3072  chain.Rsa4096  chain.Sm2
adac-tests/resources/keys/: EcdsaP256Key-0.pk8  EcdsaP256Key-1.pk8  EcdsaP256Key-2.pk8  EcdsaP256Key-3.pk8  EcdsaP384Key-0.pk8  EcdsaP384Key-1.pk8  EcdsaP384Key-2.pk8  EcdsaP384Key-3.pk8  EcdsaP521Key-0.pk8  EcdsaP521Key-1.pk8  EcdsaP521Key-2.pk8  EcdsaP521Key-3.pk8  Ed25519Key-0.pk8  Ed25519Key-1.pk8  Ed25519Key-2.pk8  Ed25519Key-3.pk8  Ed448Key-0.pk8  Ed448Key-1.pk8  Ed448Key-2.pk8  Ed448Key-3.pk8  MlDsa44Key-0.pk8  MlDsa44Key-1.pk8  MlDsa44Key-2.pk8  MlDsa44Key-3.pk8  MlDsa65Key-0.pk8  MlDsa65Key-1.pk8  MlDsa65Key-2.pk8  MlDsa65Key-3.pk8  MlDsa87Key-0.pk8  MlDsa87Key-1.pk8  MlDsa87Key-2.pk8  MlDsa87Key-3.pk8  Rsa3072Key-0.pk8  Rsa3072Key-1.pk8  Rsa3072Key-2.pk8  Rsa3072Key-3.pk8  Rsa4096Key-0.pk8  Rsa4096Key-1.pk8  Rsa4096Key-2.pk8  Rsa4096Key-3.pk8  (+4 more)
adac-tests/resources/roots/: root.EcdsaP256  root.EcdsaP384  root.EcdsaP521  root.Ed25519  root.Ed448  root.MlDsa44  root.MlDsa65  root.MlDsa87  root.Rsa3072  root.Rsa4096  root.Sm2
adac-tests/src/: aws_lc.rs  cryptoki.rs  cryptoki_mldsa.rs  encoding.rs  lib.rs  ml_dsa.rs  pkcs11.rs  rust_crypto.rs
adac/src/: certificate.rs  lib.rs  token.rs  traits.rs
