# Copyright (c) 2019-2026, Arm Limited. All rights reserved.
# SPDX-License-Identifier: BSD-3-Clause

[workspace]
resolver = "2"
members = [
    "adac",
    "adac-cli",
    "adac-crypto",
    "adac-crypto-aws_lc",
    "adac-crypto-pkcs11",
    "adac-crypto-rust",
    "adac-cryptoki",
    "adac-tests",
]

[workspace.package]
authors = ["Mathias Brossard <mathias.brossard@arm.com>"]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
base16ct = "0.2"
base64 = "0.22"
cryptoki = "0.12"
der = { version = "0.7", features = ["alloc"] }
digest = "0.10"
ecdsa = { version = "0.16", features = ["pkcs8"] }
ed25519 = { version = "2.2", features = ["alloc", "pkcs8"] }
ed25519-dalek = { version = "2.2", features = ["digest", "pkcs8"] }
ed448 = { version = "0.5.0-rc.5", features = ["alloc", "pkcs8"] }
ed448-goldilocks-plus = { version = "0.16", features = ["signing", "pkcs8"] }
elliptic-curve = { version = "0.13", features = ["sec1", "pem", "pkcs8"] }
ml-dsa = { version = "0.1.0-rc.8", features = ["pkcs8"] }
p256 = { version = "0.13", features = ["ecdsa", "jwk", "pem", "pkcs8"] }
p384 = { version = "0.13", features = ["ecdsa", "jwk", "pem", "pkcs8"] }
p521 = { version = "0.13", features = ["ecdsa", "jwk", "pem", "pkcs8"] }
pem = "3.0"
pkcs8 = { version = "0.10", features = ["pem"] }
rand = "0.8"
rsa = "0.9"
sec1 = { version = "0.7", features = ["der", "pem"] }
sha2 = "0.10"
sha3 = "0.10"
signature = "2.2"
sm2 = { version = "0.13", features = ["arithmetic", "dsa", "pkcs8"] }
sm3 = "0.4"
spki = { version = "0.7", features = ["alloc", "fingerprint", "pem", "std"] }
zeroize = "1.8.2"
