[package]
name = "adac-cli"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"

[dependencies]
adac = { path = "../adac" }
adac-crypto = { path = "../adac-crypto" }
adac-crypto-pkcs11 = { path = "../adac-crypto-pkcs11" }
adac-crypto-rust = { path = "../adac-crypto-rust" }
anyhow = "1"
base16ct = "0.2.0"
base64 = "0.22.0"
clap = { version = "4", features = ["env", "derive"] }
hex = "0.4.3"
pem = "3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.8"
thiserror = "1"
toml = "0.9"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[lints.clippy]
too_many_arguments = "allow"
