# Copyright (c) 2019-2026, Arm Limited. All rights reserved.
# SPDX-License-Identifier: BSD-3-Clause

[package]
name = "adac-cli"
authors.workspace = true
version.workspace = true
edition.workspace = true
license = "BSD-3-Clause"

[dependencies]
adac = { path = "../adac" }
adac-crypto = { path = "../adac-crypto" }
adac-crypto-pkcs11 = { path = "../adac-crypto-pkcs11" }
adac-crypto-rust = { path = "../adac-crypto-rust" }
anyhow = "1"
base16ct = { workspace = true }
base64 = { workspace = true }
clap = { version = "4", features = ["env", "derive"] }
hex = "0.4.3"
pem = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { workspace = true }
thiserror = "2"
toml = "1.1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
zeroize = { workspace = true }

[lints.clippy]
too_many_arguments = "allow"
