# Copyright (c) 2019-2026, Arm Limited. All rights reserved.
# SPDX-License-Identifier: BSD-3-Clause

[package]
name = "adac-crypto-aws_lc"
authors.workspace = true
version.workspace = true
edition.workspace = true
license = "BSD-3-Clause"

[dependencies]
adac = { path = "../adac" }
adac-crypto = { path = "../adac-crypto" }
aws-lc-rs = { version = "1.16", features = ["unstable"] }
zeroize = { workspace = true }

[lints.clippy]
dbg_macro = "deny"
print_stderr = "deny"
print_stdout = "deny"
