# Copyright (c) 2019-2026, Arm Limited. All rights reserved.
# SPDX-License-Identifier: BSD-3-Clause

[package]
name = "adac-crypto-pkcs11"
authors.workspace = true
version.workspace = true
edition.workspace = true
license = "BSD-3-Clause"

[dependencies]
adac = { path = "../adac" }
adac-crypto = { path = "../adac-crypto" }
adac-crypto-rust = { path = "../adac-crypto-rust" }
adac-cryptoki = { path = "../adac-cryptoki" }
cryptoki = { workspace = true }
base16ct = { workspace = true }
base64 = { workspace = true }
der = { workspace = true }
ed25519 = { workspace = true }
ed448 = { workspace = true }
ed448-goldilocks-plus = { workspace = true }
elliptic-curve = { workspace = true }
p256 = { workspace = true }
p384 = { workspace = true }
p521 = { workspace = true }
pkcs8 = { workspace = true }
rsa = { workspace = true }
sha2 = { workspace = true }
spki = { workspace = true }
zeroize = { workspace = true }

[lints.clippy]
dbg_macro = "deny"
print_stderr = "deny"
print_stdout = "deny"
type_complexity = "allow"
