[package]
name = "adac-crypto-rust"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"

[dependencies]
adac = { path = "../adac" }
adac-crypto = { path = "../adac-crypto" }
base16ct = "0.2.0"
der = { version = "0.7.9", features = ["alloc"] }
digest = "0.10.7"
ecdsa = { version = "0.16.9", features = ["signing", "verifying", "pkcs8"] }
ed25519 = { version = "2.2.3", features = ["alloc", "pkcs8"] }
ed25519-dalek = { version = "2.2.0", features = ["digest", "pkcs8"] }
ed448 = { version = "0.5.0-pre.0", features = ["alloc", "pkcs8"] }
ed448-goldilocks-plus = { version = "0.16.0", features = ["signing", "pkcs8"] }
elliptic-curve = { version = "0.13.8", features = ["sec1", "pem", "pkcs8"] }
p256 = { version = "0.13.2", features = ["ecdsa", "jwk", "pem", "pkcs8"] }
p384 = { version = "0.13.1", features = ["ecdsa", "jwk", "pem", "pkcs8"] }
p521 = { version = "0.13.3", features = ["ecdsa", "jwk", "pem", "pkcs8"] }
pkcs8 = { version = "0.10.2", features = ["pem"] }
ml-dsa = { version = "0.0.4", features = ["pkcs8"] }
rand = "0.8.5"
rsa = { version = "0.9", features = ["pem"] }
signature = "2.2.0"
sha2 = "0.10.8"
sha3 = "0.10.8"
sm2 = { version = "0.13.3", features = ["arithmetic", "dsa", "pkcs8"] }
sm3 = "0.4.2"

[lints.clippy]
type_complexity = "allow"
