# Copyright (c) 2019-2026, Arm Limited. All rights reserved.
# SPDX-License-Identifier: BSD-3-Clause

[package]
name = "adac-crypto"
authors.workspace = true
version.workspace = true
edition.workspace = true
license = "BSD-3-Clause"

[dependencies]
adac = { path = "../adac" }
base16ct = { workspace = true }
base64 = { workspace = true }
der = { workspace = true }
ecdsa = { workspace = true }
ed25519 = { workspace = true }
ed448 = { workspace = true }
ed448-goldilocks-plus = { workspace = true }
elliptic-curve = { workspace = true }
hybrid-array = "0.3"
ml-dsa = { workspace = true }
p256 = { workspace = true }
p384 = { workspace = true }
p521 = { workspace = true }
pem = { workspace = true }
pkcs8 = { workspace = true }
rsa = { workspace = true }
sec1 = { workspace = true }
spki = { workspace = true }
sm2 = { workspace = true }

[lints.clippy]
dbg_macro = "deny"
print_stderr = "deny"
print_stdout = "deny"
type_complexity = "allow"
