[package]
name = "adac-cryptoki"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"

[dependencies]
adac = { path = "../adac" }
adac-crypto = { path = "../adac-crypto" }
adac-crypto-rust = { path = "../adac-crypto-rust" }
base16ct = "0.2.0"
base64 = "0.22.1"
cryptoki = "0.10.0"
der = { version = "0.7.9", features = ["alloc"] }
ed25519 = { version = "2.2.3", features = ["alloc", "pkcs8"] }
ed448 = { version = "0.5.0-pre.0", features = ["alloc", "pkcs8"] }
ed448-goldilocks-plus = { version = "0.16.0", features = ["signing", "pkcs8"] }
elliptic-curve = { version = "0.13.8", features = ["sec1", "pem", "pkcs8"] }
p256 = { version = "0.13.2", features = ["ecdsa", "jwk", "pem", "pkcs8"] }
p384 = { version = "0.13.1", features = ["ecdsa", "jwk", "pem", "pkcs8"] }
p521 = { version = "0.13.3", features = ["ecdsa", "jwk", "pem", "pkcs8"] }
pkcs8 = { version = "0.10.2", features = ["pem"] }
rsa = "0.9"
sha2 = "0.10.8"
spki = { version = "0.7.3", features = ["alloc", "fingerprint", "pem", "std"] }

[lints.clippy]
type_complexity = "allow"
