# Copyright (c) 2019-2026, Arm Limited. All rights reserved.
# SPDX-License-Identifier: BSD-3-Clause

[package]
name = "adac"
authors.workspace = true
version.workspace = true
edition.workspace = true
license = "BSD-3-Clause"

[dependencies]

[lints.clippy]
dbg_macro = "deny"
print_stderr = "deny"
print_stdout = "deny"
type_complexity = "allow"
